# libpatch

./: CMakeLists.txt  build_ios.sh  libpatch.sh[ndk-pkg]
src/bsdiff/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h
src/w32inc/: err.h  unistd.h
